Swagger with bear token (Passport Auth)
